--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,12 +23,16 @@ stages:
 - stage: stgB
   dependsOn: stgA
   jobs:
-  - job: jbB1
-    pool:
-      vmImage: 'Ubuntu 16.04'
-    steps:
-    - checkout: none
-    - script: echo B1!
+  - deployment: deploy
+    displayName: Deploy job
+    environment: 'myFirstEnvironment'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - powershell: Write-Host "run your deployment steps"
+            displayName: Run Deployment
+  
 
 
     
